﻿﻿[B]Changelog[/B]
* Added: Expires at to SVT (Fixes #1213)
* Fixed: TV4.se changed their API endpoint (Fixes #1240)
* Changed: Try to extract a duration from the description (Fixes #1238)
* Fixed: UR Play site changes broke the channel (Fixes #1237)

[I]Previous changes[/I]
* Fixed: Kanal 9 and Kanal 11 fanart
* Fixed: UR Play updated their site and broke Retrospect (Fixes #1226)
* Fixed: listing of SVT shows did not work (Fixes #1217)
* Fixed: invalid expire dates for OA items in SVT Play and set Geo protected warning (Fixes #1220)
* Fixed: Swedish TV4, Sjuan and TV12 did not show subtitles (Fixes #1188)
* Changed: restructured the TV4 Play main list a bit (Fixes #1193)
* Added: Duration and Expire Date to SVT
* Fixed: Added proper translation of "Recent" to the Swedish SBS Channels (Kanal 5, 9 and 11)
* Fixed: some SVT streams had a very low bitrate or had weird audio (Fixes #1150)
* Fixed: SVT Genres (Fixes #1149)
* Fixed: SVT videos had no audio (Fixes #1143). This fix requires the InputStream Adaptvie add-on to be installed and enabled within Retrospect.
* Fixed: TV4 thumbs not showing (Fixes #1097)
* Added: search to UR Play (Fixes #1084).
* Changed: UR Play now uses HTTPS.
* Fixed: Reverted #1074 SVT Categories (Fixes #1080)
* Fixed: SVT Categories (Fixes #1074)
* Fixed: SVT Öppet arkiv playback (Fixes #1066)
* Fixed: Dplay.no had Swedish subs (Fixes #959)
* Updated: SVT textures thanks to Johan Asplund (Fixes #1049)
* Added: DPlay.dk for Danish videos via the Dplay platform (Fixes #959)
* Fixed: improper dates in Dplay.se and related channels (See #1042)
* Fixed: missed the "premium/paid" on videos still to be broad casted (Fixes #1042)
* Fixed: SVT Listing of Live Channels broke (Fixes #1023)
* Fixed: TV4/TV7.se were showing incorrect dates for the videos (Fixes #1004)
* Fixed: some TV4 stream did not work if the Adaptive Stream add-on was not used (Fixes #988)