@@ -9,7 +9,4 @@ Fixed some Swedish channel related issues and a Python 3 issue for HTTP response
 -
 
 [B]Channel related[/B]
-* Added: Expires at to SVT (Fixes #1213)
-* Fixed: UR Play site changes broke the channel (Fixes #1237)
-* Changed: Try to extract a duration from the description (Fixes #1238)
-* Fixed: TV4.se changed their API endpoint (Fixes #1240)
+* Fixed: some TV4play.se streams are now DRM protected with Widevine (Fixes #1250)
