@@ -1,10 +1,11 @@
 ﻿﻿[B]Changelog[/B]
+* Fixed: some TV4play.se streams are now DRM protected with Widevine (Fixes #1250)
+
+[I]Previous changes[/I]
 * Added: Expires at to SVT (Fixes #1213)
 * Fixed: TV4.se changed their API endpoint (Fixes #1240)
 * Changed: Try to extract a duration from the description (Fixes #1238)
 * Fixed: UR Play site changes broke the channel (Fixes #1237)
-
-[I]Previous changes[/I]
 * Fixed: Kanal 9 and Kanal 11 fanart
 * Fixed: UR Play updated their site and broke Retrospect (Fixes #1226)
 * Fixed: listing of SVT shows did not work (Fixes #1217)
